--- a/front-end/src/app/catalogue/catalogue/catalogue.component.html
+++ b/front-end/src/app/catalogue/catalogue/catalogue.component.html
@@ -1,13 +1,18 @@
 <div class="container">
-  <div class="item">
-    <div class="card" style="width: 12rem;">
+<h5 class="text-center pt-3 pb-1">Notre catalogue de produits</h5>
+  <div class="row">
+    <div *ngFor="let p of products" class="col-md-3 item">
+    <div  class="card" >
       <img class="card-img" src="assets/images/sneakers.webp" alt="Card image cap" >
+      <span class="promo-div" *ngIf="p.promotion">Promo {{p.promotion.remise}} %</span>
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h5 class="card-title">{{p.libelle}}</h5>
+        <div class="promo-text" *ngIf="p.promotion">Promo du <span>{{p.promotion.debut | date : "dd-MM-yy"}} au {{p.promotion.fin | date : "dd-MM-yy"}}</span> </div>
+        <div><span [ngClass]="{'line': p.promotion.remise > 0}">{{p.prix}}</span> $ <span *ngIf="p.promotion">{{ApplyPromo(p.prix, p.promotion.remise)}} $</span></div>
+        <p class="card-text">{{p.description}}</p>
 
       </div>
     </div>
   </div>
-
+</div>
 </div>
