--- a/front-end/src/app/catalogue/catalogue/catalogue.component.html
+++ b/front-end/src/app/catalogue/catalogue/catalogue.component.html
@@ -1,18 +1,48 @@
-<div class="container">
-<h5 class="text-center pt-3 pb-1">Notre catalogue de produits</h5>
-  <div class="row">
-    <div *ngFor="let p of products" class="col-md-3 item">
-    <div  class="card" >
-      <img class="card-img" src="assets/images/sneakers.webp" alt="Card image cap" >
-      <span class="promo-div" *ngIf="p.promotion">Promo {{p.promotion.remise}} %</span>
-      <div class="card-body">
-        <h5 class="card-title">{{p.libelle}}</h5>
-        <div class="promo-text" *ngIf="p.promotion">Promo du <span>{{p.promotion.debut | date : "dd-MM-yy"}} au {{p.promotion.fin | date : "dd-MM-yy"}}</span> </div>
-        <div><span [ngClass]="{'line': p.promotion.remise > 0}">{{p.prix}}</span> $ <span *ngIf="p.promotion">{{ApplyPromo(p.prix, p.promotion.remise)}} $</span></div>
-        <p class="card-text">{{p.description}}</p>
+<div class="container-fluid">
+  <h5 class="text-center pt-3 pb-1">Notre catalogue de produits Mercadona</h5>
 
+  <div class="all-container row">
+    <div class="col-md-2">
+      <section class="filters-section">
+        <span class="">
+          <mat-checkbox class="" [checked]="allComplete" [color]="task.color" [indeterminate]="someComplete()"
+            (change)="setAll($event.checked)">
+            {{task.name}}
+          </mat-checkbox>
+        </span>
+        <span class="">
+
+            <div *ngFor="let subtask of task.categories">
+              <mat-checkbox [(ngModel)]="subtask.completed" [color]="subtask.color"
+                (ngModelChange)="updateAllComplete()">
+                {{subtask.libelle}}
+              </mat-checkbox>
+            </div>
+
+        </span>
+      </section>
+    </div>
+    <div class="col-md-10">
+      <div class="row">
+        <div *ngFor="let p of products" class="col-md-3 item">
+          <div *ngIf="getSelectedCategories().includes(p.categorie.libelle)" class="card">
+            <img class="card-img" src="assets/images/sneakers.webp" alt="Card image cap">
+            <span class="promo-div" *ngIf="p.promotion">Promo {{p.promotion.remise}} %</span>
+            <div class="card-body">
+              <h5 class="card-title">{{p.libelle}}</h5>
+              <div class="promo-text" *ngIf="p.promotion">Promo du <span>{{p.promotion.debut | date : "dd-MM-yy"}} au
+                  {{p.promotion.fin | date : "dd-MM-yy"}}</span> </div>
+              <div><span [ngClass]="{'line': p.promotion.remise > 0}">{{p.prix}}</span> $ <span
+                  *ngIf="p.promotion">{{ApplyPromo(p.prix, p.promotion.remise)}} $</span></div>
+              <p class="card-text">{{p.description}}</p>
+
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+
+
 </div>
