--- a/front-end/src/app/admin/authentication/authentication.component.html
+++ b/front-end/src/app/admin/authentication/authentication.component.html
@@ -3,7 +3,7 @@
     <form #authForm="ngForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="username">Nom d'utilisateur</label>
-        <input type="text" class="form-control" id="username" name="username" [(ngModel)]="user.username" required>
+        <input type="text" class="form-control" id="username" name="login" [(ngModel)]="user.login" required>
       </div>
       <div class="form-group">
         <label for="password">Mot de passe</label>
