--- a/front-end/src/app/admin/admin-interface/admin-interface.component.html
+++ b/front-end/src/app/admin/admin-interface/admin-interface.component.html
@@ -1,46 +1,82 @@
 <app-navbar></app-navbar>
-<div class="container">
-  <h5 class="text-center">Ajouter un produit</h5>
+<div class="container pt-2">
+  <div class="row">
 
-  <form class="product-form" (ngSubmit)="onSubmit()" #productForm="ngForm" enctype="multipart/form-data">
-    <div class="form-group">
-      <label for="libelle">Nom du produit:</label>
-      <input type="text" id="libelle" name="libelle" class="form-control" [(ngModel)]="product.libelle" required>
+    <div class="col-md-6">
+      <h5 class="text-center">Ajouter un produit</h5>
+
+      <form class="product-form" (ngSubmit)="onSubmit()" #productForm="ngForm" enctype="multipart/form-data">
+        <div class="form-group">
+          <label for="libelle">Nom du produit:</label>
+          <input type="text" id="libelle" name="libelle" class="form-control" [(ngModel)]="product.libelle" required>
+        </div>
+
+        <div class="form-group">
+          <label for="description">Description:</label>
+          <textarea id="description" name="description" class="form-control" [(ngModel)]="product.description"
+            required></textarea>
+        </div>
+
+        <div class="form-group">
+          <label for="libelle">Image</label>
+          <input type="file" id="img" name="image" class="form-control" accept="image/*" required
+            (change)="handleFileInput($event)">
+        </div>
+
+        <div class="form-group">
+          <label for="prix">Prix:</label>
+          <input type="number" id="prix" name="prix" class="form-control" [(ngModel)]="product.prix" required>
+        </div>
+
+        <div class="form-group">
+          <label for="category">Catégorie:</label>
+          <select [(ngModel)]="product.categorieID" name="categorieID">
+            <option *ngFor="let categorie of categories" [value]="categorie.categorieID">{{ categorie.libelle }}
+            </option>
+          </select>
+
+        </div>
+
+        <div class="form-group">
+          <label for="category">Promotion:</label>
+          <select [(ngModel)]="product.promotionID" name="promotionID">
+            <option *ngFor="let promotion of promotions" [value]="promotion.promotionID">{{ promotion.remise }} %
+            </option>
+          </select>
+
+        </div>
+        <div class="text-center pt-1">
+
+          <button type="submit" class="btn btn-primary" [disabled]="!productForm.valid">Ajouter le produit</button>
+        </div>
+        <!-- <p>{{product | json}}</p> -->
+      </form>
     </div>
 
-    <div class="form-group">
-      <label for="description">Description:</label>
-      <textarea id="description" name="description" class="form-control" [(ngModel)]="product.description" required></textarea>
+    <div class="col-md-6">
+      <h5 class="text-center">Liste des produits :</h5>
+      <div class="products">
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Libelle</th>
+              <th scope="col">Prix</th>
+
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let p of products">
+
+              <td>{{p.produitID}}</td>
+              <td>{{p.libelle}}</td>
+              <td>{{p.prix}}</td>
+            </tr>
+
+          </tbody>
+        </table>
+      </div>
     </div>
+  </div>
 
-    <div class="form-group">
-      <label for="libelle">Image</label>
-      <input type="file" id="img" name="image" class="form-control"  accept="image/*" required (change)="handleFileInput($event)">
-    </div>
-
-    <div class="form-group">
-      <label for="prix">Prix:</label>
-      <input type="number" id="prix" name="prix" class="form-control" [(ngModel)]="product.prix" required>
-    </div>
-
-    <div class="form-group">
-      <label for="category">Catégorie:</label>
-      <select  [(ngModel)]="product.categorieID"  name="categorieID">
-        <option *ngFor="let categorie of categories" [value]="categorie.categorieID">{{ categorie.libelle }}</option>
-      </select>
-
-    </div>
-
-    <div class="form-group">
-      <label for="category">Promotion:</label>
-      <select [(ngModel)]="product.promotionID" name="promotionID" >
-        <option  *ngFor="let promotion of promotions" [value]="promotion.promotionID">{{ promotion.remise }} %</option>
-      </select>
-
-    </div>
-
-    <button type="submit" class="btn btn-primary" [disabled]="!productForm.valid">Ajouter le produit</button>
-    <p>{{product | json}}</p>
-  </form>
 </div>
-
