--- a/front-end/src/app/admin/navbar/navbar.component.css
+++ b/front-end/src/app/admin/navbar/navbar.component.css
@@ -1,17 +1,20 @@
 .navbar {
-  background-color: #fff;
+
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  height: 3.5em;
 }
 
 .navbar-brand {
-  font-size: 1.5rem;
+  font-size: 1.5em;
   font-weight: bold;
+  color: bisque;
+  padding-left: 1em;
 }
 
 .nav-link {
-  color: #007bff !important;
+  color: white !important;
 }
 
 .nav-link:hover {
-  color: #0056b3 !important;
+  color: white !important;
 }
