--- a/front-end/src/app/admin/navbar/navbar.component.html
+++ b/front-end/src/app/admin/navbar/navbar.component.html
@@ -6,10 +6,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Ajouter un produit</a>
+        <a class="nav-link" href="AdminInterface/produits">Ajouter un produit</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Ajouter une catégorie</a>
+        <a class="nav-link" href="AdminInterface/categories">Ajouter une catégorie</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="AdminInterface/promotions">Ajouter une promotion</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Déconnexion</a>
