--- a/front-end/src/app/admin/produits/produits.component.html
+++ b/front-end/src/app/admin/produits/produits.component.html
@@ -54,28 +54,31 @@
       </div>
     </div>
 
-    <div class="col-md-6">
-      <h5 class="text-center">Liste des produits :</h5>
-      <div class="products">
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">ID</th>
-              <th scope="col">Libelle</th>
-              <th scope="col">Prix</th>
+    <div class="col-md-6 pt-4">
+      <div class="">
+        <h5 class="text-center">Liste des produits :</h5>
+        <div class="products">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Libelle</th>
+                <th scope="col">Prix</th>
 
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let p of products">
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let p of products">
 
-              <td>{{p.produitID}}</td>
-              <td>{{p.libelle}}</td>
-              <td>{{p.prix}}</td>
-            </tr>
+                <td>{{p.produitID}}</td>
+                <td>{{p.libelle}}</td>
+                <td>{{p.prix}}</td>
+              </tr>
 
-          </tbody>
-        </table>
+            </tbody>
+          </table>
+        </div>
+
       </div>
     </div>
   </div>
