--- a/front-end/src/app/admin/promotions/promotions.component.html
+++ b/front-end/src/app/admin/promotions/promotions.component.html
@@ -17,6 +17,7 @@
               <input class="form-control" name = "remise" type="number" [(ngModel)] = "remise" required>
             </div>
             <button type="submit" class="btn btn-primary mt-1" [disabled]="!promoForm.valid">Enregistrer</button>
+            <div style="color:red" *ngIf="errorDate">La date de début de promotion doit être inférieure à la date de début de promotion</div>
           </form>
       </div>
 
