securisation des routes front-end avec les guards d'angular

--- a/front-end/src/app/catalogue/catalogue/catalogue.component.html
+++ b/front-end/src/app/catalogue/catalogue/catalogue.component.html
@@ -6,7 +6,7 @@
 
       <section class="filters-section">
         <span class="">
-          <mat-checkbox #all
+          <mat-checkbox #all checked
             (change)="setAll($event.checked)">
             Tout
           </mat-checkbox>
