sécurisation des routes backend et mise en place de la deconnexion

--- a/front-end/src/app/admin/navbar/navbar.component.html
+++ b/front-end/src/app/admin/navbar/navbar.component.html
@@ -15,7 +15,7 @@
         <a class="nav-link" href="AdminInterface/promotions">Ajouter une promotion</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Déconnexion</a>
+        <a class="nav-link" (click)="unLog()" style="cursor:pointer">Déconnexion</a>
       </li>
     </ul>
   </div>
