--- a/front-end/src/app/admin/produits/produits.component.html
+++ b/front-end/src/app/admin/produits/produits.component.html
@@ -54,7 +54,7 @@
       </div>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-md-6 mt-4">
       <h5 class="text-center">Liste des produits :</h5>
       <div class="products">
         <table class="table">
