--- a/front-end/src/app/app.component.css
+++ b/front-end/src/app/app.component.css
@@ -1,6 +1,9 @@
 .container-fluid{
   font-size:0.8em;
+  font-family: 'Inter', sans-serif;
+  color: #3E3E3E;
 }
 h5{
   font-size: 0.9em;
+  color: #3E3E3E;
 }
