Ajout d'un loader dans le catalogue

--- a/front-end/src/app/admin/authentication/authentication.component.html
+++ b/front-end/src/app/admin/authentication/authentication.component.html
@@ -10,7 +10,7 @@
         <input type="password" class="form-control" id="password" name="password" [(ngModel)]="user.password" required>
       </div>
       <button type="submit" class="btn btn-primary mt-2">Se connecter</button>
-      <p>{{authForm.value | json}}</p>
+      <!-- <p>{{authForm.value | json}}</p> -->
     </form>
   </div>
 
