--- a/front-end/src/app/admin/navbar/navbar.component.html
+++ b/front-end/src/app/admin/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-  <a class="navbar-brand" href="#">Mercadona Admin</a>
+  <a class="navbar-brand" >Mercadona Admin</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -13,6 +13,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="AdminInterface/promotions">Ajouter une promotion</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="AdminInterface">Catalogue</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" (click)="unLog()" style="cursor:pointer">Déconnexion</a>
