--- a/front-end/src/app/catalogue/catalogue/catalogue.component.html
+++ b/front-end/src/app/catalogue/catalogue/catalogue.component.html
@@ -24,7 +24,7 @@
             <span class="">
 
                 <div *ngFor="let cat of categoryChecker.categories" >
-                  <mat-checkbox [(ngModel)]="cat.completed" (change)="uncheckAllCheckbox($event)">
+                  <mat-checkbox [(ngModel)]="cat.completed" (change)="filterProducts()">
                     {{cat.libelle}}
                   </mat-checkbox>
                 </div>
@@ -34,24 +34,28 @@
         </div>
         <div class="col-md-10">
           <div class="row">
-            <div *ngFor="let p of products" class="col-md-3 item">
-              <div *ngIf="getSelectedCategories().includes(p.categorie.libelle)" class="card">
-                <h5 class="card-title">{{p.libelle  | titlecase}}</h5>
-                <div class="img-container">
-                  <img class="card-img" [src]="'data:image/png;base64,' + p.image" alt="Card image cap">
+            <div *ngFor="let p of filteredProducts" class=" item col-md-3">
+       <!--        <ng-container  *ngIf="getSelectedCategories().includes(p.categorie.libelle)" > -->
+               <ng-container>
+                <div  class="card ">
+                  <h5 class="card-title">{{p.libelle  | titlecase}}</h5>
+                  <div class="img-container">
+                    <img class="card-img" [src]="'data:image/png;base64,' + p.image" alt="Card image cap">
+                  </div>
+
+                  <span class="promo-div" *ngIf="p.promotion">Promo {{p.promotion.remise}} %</span>
+                  <div class="card-body">
+
+                    <div class="promo-text" *ngIf="p.promotion">Promo du <span>{{p.promotion.debut | date : "dd-MM-yy"}} au
+                        {{p.promotion.fin | date : "dd-MM-yy"}}</span> </div>
+                    <div><span [ngClass]="{'line': p.promotion.remise > 0}">{{p.prix}}</span> $ <span
+                        *ngIf="p.promotion">{{ApplyPromo(p.prix, p.promotion.remise)}} $</span></div>
+                    <p class="card-text">{{p.description}}</p>
+
+                  </div>
                 </div>
+              </ng-container>
 
-                <span class="promo-div" *ngIf="p.promotion">Promo {{p.promotion.remise}} %</span>
-                <div class="card-body">
-
-                  <div class="promo-text" *ngIf="p.promotion">Promo du <span>{{p.promotion.debut | date : "dd-MM-yy"}} au
-                      {{p.promotion.fin | date : "dd-MM-yy"}}</span> </div>
-                  <div><span [ngClass]="{'line': p.promotion.remise > 0}">{{p.prix}}</span> $ <span
-                      *ngIf="p.promotion">{{ApplyPromo(p.prix, p.promotion.remise)}} $</span></div>
-                  <p class="card-text">{{p.description}}</p>
-
-                </div>
-              </div>
             </div>
           </div>
         </div>
