choix de la categorie necessaire pour ajouter un produit

--- a/front-end/src/app/admin/produits/produits.component.html
+++ b/front-end/src/app/admin/produits/produits.component.html
@@ -31,7 +31,7 @@
           <div class="form-group">
             <label for="category">Catégorie:</label>
             <select [(ngModel)]="product.categorieID" name="categorieID" class="form-control">
-              <option *ngFor="let categorie of categories" [value]="categorie.categorieID">{{ categorie.libelle }}
+              <option *ngFor="let categorie of categories" [value]="categorie.categorieID" required>{{ categorie.libelle }}
               </option>
             </select>
 
