nullable promotion on product

--- a/front-end/src/app/catalogue/catalogue/catalogue.component.html
+++ b/front-end/src/app/catalogue/catalogue/catalogue.component.html
@@ -12,55 +12,57 @@
 
     </div>
 
-      <div class="all-container row">
-        <div class="col-md-2">
+    <div class="all-container row">
+      <div class="col-md-2">
 
-          <section class="filters-section" >
-            <span class="">
-              <mat-checkbox #all checked
-                (change)="setAll($event.checked)">
-                Tout
+        <section class="filters-section">
+          <span class="">
+            <mat-checkbox #all checked (change)="setAll($event.checked)">
+              Tout
+            </mat-checkbox>
+          </span>
+          <span class="">
+
+            <div *ngFor="let cat of categoryChecker.categories">
+              <mat-checkbox [(ngModel)]="cat.completed" (change)="filterProducts()">
+                {{cat.libelle}}
               </mat-checkbox>
-            </span>
-            <span class="">
-
-                <div *ngFor="let cat of categoryChecker.categories" >
-                  <mat-checkbox [(ngModel)]="cat.completed" (change)="filterProducts()" >
-                    {{cat.libelle}}
-                  </mat-checkbox>
-                </div>
-
-            </span>
-          </section>
-        </div>
-        <div class="col-md-10">
-          <div class="row">
-            <div *ngFor="let p of filteredProducts" class=" item col-md-3">
-       <!--        <ng-container  *ngIf="getSelectedCategories().includes(p.categorie.libelle)" > -->
-               <ng-container>
-                <div  class="card ">
-                  <h5 class="card-title">{{p.libelle  | titlecase}}</h5>
-                  <div class="img-container">
-                    <img class="card-img" [src]="pathImages + p.image" alt="Card image cap">
-                  </div>
-
-                  <span class="promo-div" *ngIf="p.promotion">Promo {{p.promotion.remise}} %</span>
-                  <div class="card-body">
-
-                    <div class="promo-text" *ngIf="p.promotion">Promo du <span>{{p.promotion.debut | date : "dd-MM-yy"}} au
-                        {{p.promotion.fin | date : "dd-MM-yy"}}</span> </div>
-                    <div><span [ngClass]="{'line': p.promotion.remise > 0}">{{p.prix}}</span> $ <span
-                        *ngIf="p.promotion">{{ApplyPromo(p.prix, p.promotion.remise)}} $</span></div>
-                    <p class="card-text">{{p.description}}</p>
-
-                  </div>
-                </div>
-              </ng-container>
-
             </div>
+
+          </span>
+        </section>
+      </div>
+      <div class="col-md-10">
+        <div class="row">
+          <div *ngFor="let p of filteredProducts" class=" item col-md-3">
+            <!--        <ng-container  *ngIf="getSelectedCategories().includes(p.categorie.libelle)" > -->
+            <ng-container>
+              <div class="card ">
+                <h5 class="card-title">{{p.libelle | titlecase}}</h5>
+                <div class="img-container">
+                  <img class="card-img" [src]="pathImages + p.image" alt="Card image cap">
+                </div>
+
+                <span class="promo-div" *ngIf="p.promotion">Promo {{p.promotion.remise}} %</span>
+                <div class="card-body">
+
+                  <div *ngIf="p.promotion" class="promo-text" >Promo du <span>{{p.promotion.debut | date : "dd-MM-yy"}}
+                      au
+                      {{p.promotion.fin | date : "dd-MM-yy"}}</span> </div>
+                  <div *ngIf="p.promotion">
+                    <span [ngClass]="{'line': p.promotion.remise > 0}">{{p.prix}}</span> $ <span
+                      >{{ApplyPromo(p.prix, p.promotion.remise)}} $</span>
+                  </div>
+                  <p class="card-text">{{p.description}}</p>
+
+                </div>
+              </div>
+            </ng-container>
+
           </div>
         </div>
       </div>
+    </div>
   </div>
 
 
