--- a/front-end/src/app/admin/promotions/promotions.component.html
+++ b/front-end/src/app/admin/promotions/promotions.component.html
@@ -5,16 +5,16 @@
         <h5 class="title-app">Ajouter une promotion</h5>
           <form #promoForm = ngForm (submit)="submitForm()">
             <div >
-              <label for = "startDate">Date de début</label>
+              <label for = "startDate">*Date de début</label>
               <input  class="form-control" name = "startDate" type="date"  [(ngModel)]="startDate" [min]="today | date:'yyyy-MM-dd'" required>
             </div>
             <div >
-              <label for = "endDate">Date de fin</label>
+              <label for = "endDate">*Date de fin</label>
               <input  class="form-control" name = "endDate" type="date" [(ngModel)]="endDate"  [min]="startDate| date:'yyyy-MM-dd' " required>
             </div>
             <div >
-              <label for = "remise">Remise</label>
-              <input class="form-control" name = "remise" type="number" [(ngModel)] = "remise" required>
+              <label for = "remise">*Remise</label>
+              <input class="form-control" name = "remise" type="number" [(ngModel)] = "remise"  min="0" required>
             </div>
             <button type="submit" class="btn btn-primary mt-3" [disabled]="!promoForm.valid">Enregistrer</button>
             <div style="color:red" *ngIf="errorDate">La date de début de promotion doit être inférieure à la date de fin de promotion</div>
